# design_pattern

./: pyproject.toml
UML/CLASS/: 00_01.pu
