[tool.poetry]
name = "design-pattern"
version = "0.0.0"
description = ""
authors = ["hamashousf <hamashous.f@gmail.com>"]
readme = "README.md"
packages = [{include = "design_pattern"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
